# ClothingCatalog

./: .env.example  .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp  minimal.qss  resources.qrc
.github/workflows/: cmake.yml
qml-demo/: CMakeLists.txt  Main.qml  README.md  main.cpp
server/: server_main.cpp
server/src/: ServerCommon.h  ServerDatabase.h  ServerResponses.h  ServerSecurity.h  SmtpService.h
src/api/: ApiClient.h
src/app/: AppCommon.h  ServerLauncher.h
src/auth/: AuthDialogs.h
src/cart/: CartManager.h
src/data/: DatabaseService.h
src/dialogs/: AdminDialog.h  CartDialog.h  MyOrdersDialog.h  PaymentDialog.h  ProductDetailsDialog.h  ProductEditDialog.h  QuickRecommendDialog.h  RecommendationsDialog.h  UserProfileDialog.h
src/models/: DataModels.h
src/payment/: LocalPayServer.h
src/services/: ProductLoader.h
src/style/: AppTheme.h
src/widgets/: CustomTitleBar.h  ProductCardFrame.h  RoundCloseButton.h
src/windows/: CatalogWindow.h
